--- a/logstash.conf.example
+++ b/logstash.conf.example
@@ -15,7 +15,7 @@ output {
     codec => "dots"
   }
   amazon_es {
-    hosts                 => ["$ES_HOSTS"]
+    hosts                 => ["$AWS_ES_HOSTS"]
     aws_access_key_id     => "$AWS_ACCESS_KEY_ID"
     aws_secret_access_key => "$AWS_SECRET_ACCESS_KEY"
     region                => "$AWS_DEFAULT_REGION"
